# linver

./: CMakeLists.txt  main.c  main.h
linux_methods/: firmware_ver.c  firmware_ver.h  linclude.h  linuxver.c  linuxver.h
win32_methods/: firmver.c  firmver.h  winclude.h  winver.c  winver.h
